<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agro">

    <Button
        android:id="@+id/button_start"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:text="@string/start_work"/>

    <TextView
        android:id="@+id/name_first_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:text="@string/minsk_region"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/position_minsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:gravity="center"
        android:text="position"
        app:layout_constraintBottom_toTopOf="@id/name_first_region"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/result_first_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_first_region">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/corn" />

        <TextView
            android:id="@+id/corn_box_minsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/potato" />

        <TextView
            android:id="@+id/potato_box_minsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/cucumber" />

        <TextView
            android:id="@+id/cucumber_box_minsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/name_second_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/gomel_region"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_first_region" />

    <TextView
        android:id="@+id/position_gomel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/name_second_region"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/result_second_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_second_region">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/corn" />

        <TextView
            android:id="@+id/corn_box_gomel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/potato" />

        <TextView
            android:id="@+id/potato_box_gomel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/cucumber" />

        <TextView
            android:id="@+id/cucumber_box_gomel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/name_third_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/brest_region"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_second_region" />

    <TextView
        android:id="@+id/position_brest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/name_third_region"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/result_third_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_third_region">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/corn" />

        <TextView
            android:id="@+id/corn_box_brest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/potato" />

        <TextView
            android:id="@+id/potato_box_brest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/cucumber" />

        <TextView
            android:id="@+id/cucumber_box_brest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_value"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>